--- a/package.json
+++ b/package.json
@@ -1,32 +1,59 @@
 {
   "name": "vue-cold-toast",
-  "version": "1.0.0",
-  "description": "",
-  "files": ["dist"],
-  "main": "dist/my-component-library.umd.js",
-  "module": "dist/my-component-library.es.js",
-  "types": "dist/types/index.d.ts",
+  "private": false,
+  "version": "0.0.5",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vue-cold-toast.umd.js",
+  "module": "./dist/vue-cold-toast.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/vue-cold-toast.es.js",
+      "require": "./dist/vue-cold-toast.umd.js"
+    },
+    "./dist/vue-cold-toast.css": {
+      "import": "./dist/vue-cold-toast.css",
+      "require": "./dist/vue-cold-toast.css"
+    }
+  },
+  "types": "./dist/main.d.ts",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && npm run build:types",
-    "build:types": "vue-tsc --project tsconfig.build-types.json --declaration --emitDeclarationOnly --outDir dist/types ",
-    "typecheck": "vue-tsc --project tsconfig.build-types.json --noEmit"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
-  "keywords": [
-    "vue",
-    "toast",
-    "notification"
-  ],
-  "author": "",
-  "license": "ISC",
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@algolia/client-search"
+      ]
+    }
+  },  
+  "peerDependencies": {
+    "tailwindcss": "^3.0.0"
+  },
+  "dependencies": {
+    "@vueuse/core": "^9.12.0",
+    "motion": "^10.15.5",
+    "tailwind-merge": "^1.9.1"
+  },
   "devDependencies": {
-    "@babel/types": "^7.20.7",
     "@types/node": "^18.13.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "sass": "^1.58.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.1",
+    "autoprefixer": "^10.4.13",
+    "path": "^0.12.7",
+    "postcss": "^8.4.21",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "tailwindcss": "^3.2.6",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0",
+    "vite-plugin-dts": "^1.7.2",
+    "vitepress": "1.0.0-alpha.46",
     "vue": "^3.2.47",
     "vue-tsc": "^1.0.24"
   }
