--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-cold-toast",
   "private": false,
-  "version": "0.0.12",
+  "version": "0.0.13",
   "type": "module",
   "files": [
     "dist"
@@ -33,18 +33,14 @@
         "@algolia/client-search"
       ]
     }
-  },  
-  "peerDependencies": {
-    "tailwindcss": "^3.0.0"
   },
   "dependencies": {
-    "@vueuse/core": "^9.12.0",
-    "motion": "^10.15.5",
-    "tailwind-merge": "^1.9.1"
+    "motion": "^10.15.5"
   },
   "devDependencies": {
     "@types/node": "^18.13.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vueuse/core": "^9.13.0",
     "autoprefixer": "^10.4.13",
     "path": "^0.12.7",
     "postcss": "^8.4.21",
