--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "strict": true,
     "jsx": "preserve",
     "resolveJsonModule": true,
@@ -19,15 +19,16 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "declaration": true,
     "preserveSymlinks": false,
     "outDir": "dist",
-    "declarationDir": "dist",
+    // "declaration": true,
+    // "declarationDir": "dist",
     "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
-      ]
+      ],
+      // "@vueuse/core": ["node_modules/@vueuse/core/index.d.ts"]
     }
   },
   "include": [
@@ -35,7 +36,7 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "sandbox/*.vue",
+    // "sandbox/*.vue",
   ],
   "references": [
     {
