--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "vite-plugin-dts": "^1.7.2",
     "vitepress": "1.0.0-alpha.46",
     "vue": "^3.2.47",
+    "vue-cold-toast": "^0.0.14",
     "vue-tsc": "^1.0.24"
   }
 }
